--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -37,7 +37,10 @@ jobs:
 
       # Build the Rust project
       - name: Build Rust project
-        run: cargo build --release --target ${{ matrix.rust_target }}
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y musl-dev gcc-aarch64-linux-gnu
+          cargo build --release --target ${{ matrix.rust_target }}
 
       # Upload the artifact
       - name: Upload Artifact
